<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"/>
    <EditText
        android:id="@+id/address"
        android:layout_below="@id/addressLabel"
        android:text="google.com"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/method"
        android:layout_below="@id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pingMethod"
        />
        <RadioGroup
            android:id="@+id/methodGroup"
            android:layout_below="@id/method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/externalLib"
                android:text="@string/externalLib"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/runtimeJava"
                android:text="@string/runtimeJava"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>
    <ViewFlipper
        android:id="@+id/vf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        >
        <!--External UI-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/ipLabel"
                android:layout_below="@id/method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipVersion"
                />
            <RadioGroup
                android:id="@+id/ipGroup"
                android:layout_below="@id/ipLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/ipDefault"
                    android:text="@string/defaultIp"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/ipv6"
                    android:text="@string/ipv6"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/ipv4"
                    android:text="@string/ipv4"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <CheckBox
                android:id="@+id/wifi"
                android:text="@string/wifi_only"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ping Result"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                />
                <TextView
                    android:id="@+id/extRs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="center"
                />

            </LinearLayout>
        </LinearLayout>

        <!-- Runtime UI-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ping Count"
                />
                <EditText
                    android:id="@+id/countOfPing"
                    android:inputType="number"
                    android:text="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ping Result"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    />
                <TextView
                    android:id="@+id/runtimeRs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="center"
                />
            </LinearLayout>

        </LinearLayout>
    </ViewFlipper>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/ping"/>
</LinearLayout>